--- a/Рекомендательная модель/README
+++ b/Рекомендательная модель/README
@@ -1,3 +1,5 @@
+# Проект рекомендательная модель для интернет-магазина
+
 ### Бизнес окружение
 - Интернет-магазин «В один клик» продаёт разные товары: для детей, для дома, мелкую бытовую технику, косметику и даже продукты. 
 - Отчёт магазина за прошлый период показал, что активность покупателей начала снижаться
