--- a/Рекомендательная модель/README
+++ b/Рекомендательная модель/README
@@ -10,7 +10,7 @@
 
 - Нужно промаркировать уровень финансовой активности постоянных покупателей. В компании принято выделять два уровня активности: «снизилась», если клиент стал покупать меньше товаров, и «прежний уровень».
 
-__Нужно собрать данные по клиентам по следующим группам:__
+Нужно собрать данные по клиентам по следующим группам:
 1. Признаки, которые описывают коммуникацию сотрудников компании с клиентом.
 2. Признаки, которые описывают продуктовое поведение покупателя. Например, какие товары покупает и как часто.
 3. Признаки, которые описывают покупательское поведение клиента. Например, сколько тратил в магазине.
@@ -33,3 +33,4 @@ __Нужно собрать данные по клиентам по следую
 - Шаг 7. Анализ важности признаков
 - Шаг 8. Сегментация покупателей
 - Шаг 9. Вывод
+
