--- a/Startup classification/README
+++ b/Startup classification/README
@@ -1,4 +1,4 @@
-__Описание проекта:__
+<h1>Описание проекта</h1>
 
 Проект представляет из себя модель классификации стартапов, прогнозирующий закрытие стартапа. Данные взяты c Crunchbase
 
