--- a/Startup classification/README
+++ b/Startup classification/README
@@ -1,78 +1,78 @@
-<h1>Описание проекта</h1>
+# Описание проекта
 
-Проект представляет из себя модель классификации стартапов, прогнозирующий закрытие стартапа. Данные взяты c Crunchbase
+Проект представляет собой модель классификации стартапов, прогнозирующую закрытие стартапа. Данные взяты с Crunchbase.
 
 ## Выводы
-__Заключение по загрузке и ознакомлению с данными:__
 
-- Тренировочные данные представлены таблицей размерностью 52879 строк и 13 столбцов
-- Тестовые данные представлены 13211 строк и 12 столбцов
-- Содержание столбцов схоже, в тестовых данных отсутствует столбец с целевым признаком
+### Заключение по загрузке и ознакомлению с данными:
+
+- Тренировочные данные представлены таблицей размерностью 52879 строк и 13 столбцов.
+- Тестовые данные представлены таблицей размерностью 13211 строк и 12 столбцов.
+- Содержание столбцов схоже, в тестовых данных отсутствует столбец с целевым признаком.
 
 Столбцы:
-- __name__ - Название стартапа 
-- __category_list__ - Индустрия в которой работает стартап
-- __funding_total_usd__ - Объем инвестиций
-- __status__ - статус функционирования (целевой признак, отсутствует в тестовой выборке)
-- __country_code__ - страна 
-- __state_code__ - штат
-- __region__ - Регион стартапа
-- __city__ - Город где функционирует стартап
-- __funding_rounds__ - число раундов финансирования
-- __founded_at__ - дата создания стартапа
-- __first_funding_at__ - дата первого раунда финансирования
-- __last_funding_at__ - дата последнего раунда финансирования
-- __closed_at__ - дата закрытия стартапа
+- **name** - Название стартапа.
+- **category_list** - Индустрия, в которой работает стартап.
+- **funding_total_usd** - Объем инвестиций.
+- **status** - Статус функционирования (целевой признак, отсутствует в тестовой выборке).
+- **country_code** - Страна.
+- **state_code** - Штат.
+- **region** - Регион стартапа.
+- **city** - Город, где функционирует стартап.
+- **funding_rounds** - Число раундов финансирования.
+- **founded_at** - Дата создания стартапа.
+- **first_funding_at** - Дата первого раунда финансирования.
+- **last_funding_at** - Дата последнего раунда финансирования.
+- **closed_at** - Дата закрытия стартапа.
 
-__Заключение по предподготовке данных:__
+### Заключение по предподготовке данных:
 
-- Тренировочный датасет и тестовый датасет имеют схожую статистику по пропускам
-- В тренировочном файле дубликаты не выявлены
-- 91% наблюдений не содержит информацию о том, когда закрылись компании, а следовательно предполагаем, что они еще работают.
-- 5% наблюдений не содержат информацию в каком рынке функционирует стартап
-- 10% не содержит информацию о стране происхождения
-- 13% о штате происхождения 
-- 12% не содержин информацию о регионе происхождения
-- 12% не содержит информацию о городе происхождения
-- Отсутствующие данные заменены на заглушки
+- Тренировочный датасет и тестовый датасет имеют схожую статистику по пропускам.
+- В тренировочном файле дубликаты не выявлены.
+- 91% наблюдений не содержит информацию о дате закрытия компаний, что предполагает, что они ещё работают.
+- 5% наблюдений не содержат информацию о рынке, в котором функционирует стартап.
+- 10% наблюдений не содержат информацию о стране происхождения.
+- 13% наблюдений не содержат информацию о штате происхождения.
+- 12% наблюдений не содержат информацию о регионе происхождения.
+- 12% наблюдений не содержат информацию о городе происхождения.
+- Отсутствующие данные заменены на заглушки.
 
-__Cозданы новые признаки на базе столбцов с датами:__
+### Созданы новые признаки на базе столбцов с датами:
 
-- lifetime продолжительность жизни стартапа от даты создания до даты закрытия
-- funding_length продолжительность жизни стартапа между первым и последним раундом финансирования
-- first_funding_lt продолжительность жизни стратапа между первым финансированием и созданием
-- funding_life_share - доля жизни стартапа с финансированием
+- **lifetime** - Продолжительность жизни стартапа от даты создания до даты закрытия.
+- **funding_length** - Продолжительность жизни стартапа между первым и последним раундом финансирования.
+- **first_funding_lt** - Продолжительность жизни стартапа между первым финансированием и созданием.
+- **funding_life_share** - Доля жизни стартапа с финансированием.
 
-__Анализ количественных данных:__
-- В среднем 1 раунд финансирования у всех наблюдений
-- Присутствует отрицательный lifetime, скорее всего это аномалия
-- В среднем между первым и последним финансированием проходит 346 дней
-- Присутствуют отрицательные значения времени до первого фандинга перед созданием компании, возможно финансирование поступило на pre seed фазе
+### Анализ количественных данных:
 
-__Анализ качественных данных:__
-- Присутствует дисбаланс целевого признака
-- Топ 10 имен категории в столбце Category_list для статуса Closed: ['Unknown_category', 'Software', 'Biotechnology', 'Curated Web', 'Clean Technology', 'Mobile', 'Games', 'E-Commerce', 'Advertising']. Стартапы по которым неизвестна категория закрывались быстрее всех. 
-- Топ 10 имен категории в столбце Country_code для статуса Closed: ['USA', 'Unknown_country', 'GBR', 'RUS', 'CAN', 'FRA', 'ISR', 'DEU', 'CHN']. Закрывшиеся стартапы часто находятся в США, возможно просто по причине того, что они там чаще открываются и закрываются.
-- Топ 10 имен категории в столбце Region для статуса Closed: ['Unknown_region', 'SF Bay Area', 'New York City', 'Los Angeles', 'London', 'Boston', 'Moscow', 'Seattle', 'Austin']. Стартапы из неизвестного региона чаще закрывются.
-- Топ 10 имен категории в столбце City для статуса Closed: ['Unknown_city', 'San Francisco', 'New York', 'London', 'Moscow', 'Los Angeles', 'Palo Alto', 'Austin', 'Seattle'] 
+- В среднем 1 раунд финансирования у всех наблюдений.
+- Присутствует отрицательный **lifetime**, скорее всего, это аномалия.
+- В среднем между первым и последним финансированием проходит 346 дней.
+- Присутствуют отрицательные значения времени до первого фандинга перед созданием компании, возможно, финансирование поступило на pre-seed фазе.
 
-__Таким образом ключевая находка по закрывшимся стартапам - о них было мало информации__ 
+### Анализ качественных данных:
 
-- Мультиколлинеарность отсутствует. Наибольшая корреляция между раундами финансирования и объемом финансирования. 
-- В модели будем работаем со следующими признаками: 'funding_stage', 'funding_total_usd', 'country_code', 'funding_rounds', 'lifetime'
+- Присутствует дисбаланс целевого признака.
+- Топ 10 категорий в столбце **category_list** для статуса Closed: ['Unknown_category', 'Software', 'Biotechnology', 'Curated Web', 'Clean Technology', 'Mobile', 'Games', 'E-Commerce', 'Advertising']. Стартапы, по которым неизвестна категория, закрывались быстрее всех.
+- Топ 10 стран в столбце **country_code** для статуса Closed: ['USA', 'Unknown_country', 'GBR', 'RUS', 'CAN', 'FRA', 'ISR', 'DEU', 'CHN']. Закрывшиеся стартапы чаще находятся в США, возможно, просто потому что там их больше открывается и закрывается.
+- Топ 10 регионов в столбце **region** для статуса Closed: ['Unknown_region', 'SF Bay Area', 'New York City', 'Los Angeles', 'London', 'Boston', 'Moscow', 'Seattle', 'Austin']. Стартапы из неизвестного региона чаще закрываются.
+- Топ 10 городов в столбце **city** для статуса Closed: ['Unknown_city', 'San Francisco', 'New York', 'London', 'Moscow', 'Los Angeles', 'Palo Alto', 'Austin', 'Seattle'].
 
-__Наилучшая модель:__ 
+### Таким образом, ключевая находка по закрывшимся стартапам - о них было мало информации.
 
-- DecisionTreeClassifier(max_depth=7, max_features=9, random_state=42)
-- MinMaxScaler() применялся для масштабирования числовых признаков
-- lifetime наиболее важный призна
-- Метрика лучшей модели на кросс-валидации: 0.6830379886708718
+- Мультиколлинеарность отсутствует. Наибольшая корреляция между раундами финансирования и объемом финансирования.
+- В модели используются следующие признаки: 'funding_stage', 'funding_total_usd', 'country_code', 'funding_rounds', 'lifetime'.
 
+### Наилучшая модель:
 
-## Предложения по улучшению модели и применение
+- **DecisionTreeClassifier** (max_depth=7, max_features=9, random_state=42).
+- **MinMaxScaler** применялся для масштабирования числовых признаков.
+- **lifetime** - наиболее важный признак.
+- Метрика лучшей модели на кросс-валидации: 0.6830379886708718.
 
-- Для венчурных инвесторов можно продолжить развитие модели включив анализ порога классификации. 
-- Стоит обратить на качество инвесторов осуществивших инвестиции.
-- Можно изучить параметры фаундеров, включить информацию о количестве кризисов которые смогла пережить компания
+## Предложения по улучшению модели и применению:
 
-
+- Для венчурных инвесторов можно продолжить развитие модели, включив анализ порога классификации.
+- Стоит обратить внимание на качество инвесторов, осуществивших инвестиции.
+- Можно изучить параметры фаундеров, включить информацию о количестве кризисов, которые смогла пережить компания.
