--- a/Startup classification/README
+++ b/Startup classification/README
@@ -1,10 +1,8 @@
-# Описание проекта
-
 Проект представляет собой модель классификации стартапов, прогнозирующую закрытие стартапа. Данные взяты с Crunchbase.
+В работе применялся подбор моделей через pipeline.
 
-## Выводы
 
-### Заключение по загрузке и ознакомлению с данными:
+## Выводы полученные в ходе проекта
 
 - Тренировочные данные представлены таблицей размерностью 52879 строк и 13 столбцов.
 - Тестовые данные представлены таблицей размерностью 13211 строк и 12 столбцов.
