Update Сluster analysis of customers.ipynb

--- a/SQL:Python projects/Сluster analysis of customers.ipynb
+++ b/SQL:Python projects/Сluster analysis of customers.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "source": [
     "## Description\n",
-    "I am investigating dataset from Yandex Practicum SQL course\n",
+    "Dataset from e-commerce DB\n",
     "\n",
     "## Segmentation Task\n",
     "The task is to perform customer segmentaion \n",
