Update Cohort analysis churn rate.ipynb

--- a/SQL:Python projects/Cohort analysis churn rate.ipynb
+++ b/SQL:Python projects/Cohort analysis churn rate.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## Cohort analysis churn rate.\n",
-    "<p>E-commerce SQL DB, implementation in Python with usage of visualization.</p>\n",
+    "<p>E-commerce PostgressSQL DB, cohort analysis in Python with usage of visualization.</p>\n",
     "<p>Cohort analysis of churn rate for users who registered in 2019</p>"
    ]
   },
