Update Cohort analysis LTV.ipynb

--- a/SQL:Python projects/Cohort analysis LTV.ipynb
+++ b/SQL:Python projects/Cohort analysis LTV.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## Cohort analysis of LTV\n",
-    "Dataset from e-commerce DB implementation in Python with usage of visualization.\n",
+    "E-commerce PostgressSQL DB, cohort analysis in Python with usage of visualization.\n",
     "<p>Cohort analysis of LTV for users who have registered in 2019<p>"
    ]
   },
