Update Cohort analysis retention rate.ipynb

--- a/SQL:Python projects/Cohort analysis retention rate.ipynb
+++ b/SQL:Python projects/Cohort analysis retention rate.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## Cohort analysis of users retention rate\n",
-    "SQL dump from Yandex Practicum, implementation in Python with usage of visualization.\n",
+    "E-commerce PostgressSQL DB, cohort analysis in Python with usage of visualization.\n",
     "<p>Cohort analysis of retention rate for users who registered in 2019<p>"
    ]
   },
